kubernetes/kube-nas/apps/bunkerweb-ingress/bunkerweb/app/ingress-class.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: bunkerweb
spec:
  controller: bunkerweb.io/ingress-controller
