kubernetes/kube-nas/apps/bunkerweb-ingress/bunkerweb/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host echo-server.bunker.tyriis.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bunkerweb-external
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
      secretName: echo-server-tls
